--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,9 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
+
+minecraft_version=1.17.1
+yarn_mappings=1.17.1+build.32
+loader_version=0.11.6
+
+#Fabric api
+fabric_version=0.37.1+1.17
